src/objects/Lead__c.object
<CustomObject>
    <fields>
        <fullName>PmsEmailDelDateTime__c</fullName>
        <label>予約キャンセルメール通知日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PmsEmailInsUpdDateTime__c</fullName>
        <label>予約新規・変更メール通知日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QuotationComment__c</fullName>
        <label>見積書コメント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QuotationName__c</fullName>
        <label>見積書宛名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_C__c</fullName>
        <label>R/C</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ReceptionCheckTime__c</fullName>
        <label>受付_確認日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ReceptionCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>受付_確認済み</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReceptionChecker__c</fullName>
        <label>受付_確認者</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ozaki</fullName>
                </value>
                <value>
                    <fullName>Ono</fullName>
                </value>
                <value>
                    <fullName>kOno</fullName>
                </value>
                <value>
                    <fullName>Takemori</fullName>
                </value>
                <value>
                    <fullName>Moribe</fullName>
                </value>
                <value>
                    <fullName>Sawada</fullName>
                </value>
                <value>
                    <fullName>Tanaka</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Receptiondate__c</fullName>
        <formula>DATEVALUE( ReservedDate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$予約受付日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Relcontact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>お客様</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ご予約</relationshipLabel>
        <relationshipName>reservetg85</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renpakuflag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renpakuflag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReservationDate__c</fullName>
        <formula>DATEVALUE(EntryTime__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReservationDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReservedContact__c</fullName>
        <label>予約受付者</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ono</fullName>
                    <color>#0B6FCE</color>
                    <label>Ono</label>
                </value>
                <value>
                    <fullName>Kino</fullName>
                    <color>#78C953</color>
                    <label>Kino</label>
                </value>
                <value>
                    <fullName>Takahashi</fullName>
                </value>
                <value>
                    <fullName>Yamaga</fullName>
                </value>
                <value>
                    <fullName>Nishina</fullName>
                </value>
                <value>
                    <fullName>Aoki</fullName>
                    <color>#FF6600</color>
                    <label>Aoki</label>
                </value>
                <value>
                    <fullName>Katou</fullName>
                    <color>#FF0000</color>
                    <label>Katou</label>
                </value>
                <value>
                    <fullName>Ebata</fullName>
                    <color>#663366</color>
                    <label>Ebata</label>
                </value>
                <value>
                    <fullName>Akiyama</fullName>
                </value>
                <value>
                    <fullName>Kobayashi</fullName>
                </value>
                <value>
                    <fullName>Miyazaki-President</fullName>
                </value>
                <value>
                    <fullName>Miyazaki-Okami</fullName>
                </value>
                <value>
                    <fullName>Igarashi</fullName>
                </value>
                <value>
                    <fullName>Yaegashi</fullName>
                </value>
                <value>
                    <fullName>Sugimoto</fullName>
                </value>
                <value>
                    <fullName>Morimoto</fullName>
                    <color>#33FFFF</color>
                    <label>Morimoto</label>
                </value>
                <value>
                    <fullName>----------------</fullName>
                </value>
                <value>
                    <fullName>--(Yuuki)--</fullName>
                </value>
                <value>
                    <fullName>--(Horikoshi)--</fullName>
                </value>
                <value>
                    <fullName>--(Kasaba-Manager)--</fullName>
                    <color>#A845DC</color>
                    <label>--(Kasaba-Manager)--</label>
                </value>
                <value>
                    <fullName>--(Yamanashi)--</fullName>
                    <color>#666666</color>
                    <label>--(Yamanashi)--</label>
                </value>
                <value>
                    <fullName>--(Mineo)--</fullName>
                    <color>#419249</color>
                    <label>--(Mineo)--</label>
                </value>
                <value>
                    <fullName>--(Yamauchi)--</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReservedDate821__c</fullName>
        <formula>DATEVALUE(EntryTime__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReservedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReservedDate__c</fullName>
        <description>ご予約の受付日</description>
        <label>予約受付日</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ReservedStatus__c</fullName>
        <inlineHelpText>NO SHOW、キャンセルまたは、削除への変更について、パラメータにより一括キャンセルする／しないを選択可能(連泊のときのみ有効)となります。</inlineHelpText>
        <label>予約ステータス</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>確認中</fullName>
                </value>
                <value>
                    <fullName>確定</fullName>
                    <default>true</default>
                    <label>確定</label>
                </value>
                <value>
                    <fullName>会場おさえ</fullName>
                </value>
                <value>
                    <fullName>仮予約</fullName>
                </value>
                <value>
                    <fullName>キャンセルまち</fullName>
                </value>
                <value>
                    <fullName>NO SHOW</fullName>
                </value>
                <value>
                    <fullName>キャンセル</fullName>
                </value>
                <value>
                    <fullName>削除</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReservedType__c</fullName>
        <inlineHelpText>ご予約のときのタイプを指定してください。</inlineHelpText>
        <label>予約タイプ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>昼 賑</fullName>
                    <color>#0B6FCE</color>
                    <label>昼 賑</label>
                </value>
                <value>
                    <fullName>夕 賑</fullName>
                    <color>#78C953</color>
                    <label>夕 賑</label>
                </value>
                <value>
                    <fullName>昼 部屋</fullName>
                    <color>#E27001</color>
                    <label>昼 部屋</label>
                </value>
                <value>
                    <fullName>夕 部屋</fullName>
                    <color>#A845DC</color>
                    <label>夕 部屋</label>
                </value>
                <value>
                    <fullName>泊 素</fullName>
                    <color>#F3D904</color>
                    <label>泊 素</label>
                </value>
                <value>
                    <fullName>泊 朝半</fullName>
                    <color>#66E9BD</color>
                    <label>泊 朝半</label>
                </value>
                <value>
                    <fullName>泊 昼半</fullName>
                </value>
                <value>
                    <fullName>泊 夕半</fullName>
                    <color>#0B24BE</color>
                    <label>泊 夕半</label>
                </value>
                <value>
                    <fullName>泊 ２食</fullName>
                    <color>#A53711</color>
                    <label>泊 ２食</label>
                </value>
                <value>
                    <fullName>泊 ２食 朝昼</fullName>
                </value>
                <value>
                    <fullName>泊 ２食 昼夕</fullName>
                </value>
                <value>
                    <fullName>泊 ３食</fullName>
                </value>
                <value>
                    <fullName>団体 夕</fullName>
                    <color>#419249</color>
                    <label>団体 夕</label>
                </value>
                <value>
                    <fullName>団体 昼</fullName>
                    <color>#B6E32E</color>
                    <label>団体 昼</label>
                </value>
                <value>
                    <fullName>婚礼</fullName>
                </value>
                <value>
                    <fullName>昼 特企</fullName>
                    <color>#8F6429</color>
                    <label>昼 特企</label>
                </value>
                <value>
                    <fullName>お弁当 取りに参ります！</fullName>
                </value>
                <value>
                    <fullName>お弁当 持って行きます！</fullName>
                </value>
                <value>
                    <fullName>宴会</fullName>
                </value>
                <value>
                    <fullName>ケータリング</fullName>
                </value>
                <value>
                    <fullName>会議</fullName>
                </value>
                <value>
                    <fullName>法事</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RespectLst__c</fullName>
        <label>敬称</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>G_MrList</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RoomGroupNo__c</fullName>
        <description>１部屋の予約データ識別用</description>
        <label>部屋グループ番号</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RoomUpdFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>システム内容機能制御要フラグ</description>
        <label>部屋変更不可無効フラグ(システム用)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rroom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>本予約にお部屋を一つ割当てください。
お部屋を2つ以上割り当てる場合は、同一お客様名の新規予約を作成してください。</inlineHelpText>
        <label>部屋</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Room__c.TypeRoomRef__c</field>
                <operation>equals</operation>
                <valueField>$Source.refTypeOfRooms__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Room__c</referenceTo>
        <relationshipLabel>ご予約</relationshipLabel>
        <relationshipName>R00N10000000rzUoEAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesOfficeCompanyCal__c</fullName>
        <formula>CASESAFEID(SalesOfficeInfoRef__r.ParentId)</formula>
        <label>$旅行会社情報の親取引先</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOfficeInfoRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>旅行会社情報</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ご予約 (旅行会社情報)</relationshipLabel>
        <relationshipName>SalesOfficeInfoRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesaccount__c</fullName>
        <formula>IF ( BridalDantaikei__c = 0,  Field283__c , BridalDantaikei__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>婚礼または団体の見積合計金額が¥0なら、見積合計$を、そうでなければ、見積合計(税込)</inlineHelpText>
        <label>$Salesaccount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SearchDate__c</fullName>
        <label>SearchDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>セグメント</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>通常料金</fullName>
                </value>
                <value>
                    <fullName>自社プラン</fullName>
                </value>
                <value>
                    <fullName>特別料金</fullName>
                </value>
                <value>
                    <fullName>WEB個人</fullName>
                </value>
                <value>
                    <fullName>AGT個人</fullName>
                </value>
                <value>
                    <fullName>海外個人</fullName>
                </value>
                <value>
                    <fullName>コンプ</fullName>
                </value>
                <value>
                    <fullName>ダイレクト団体</fullName>
                </value>
                <value>
                    <fullName>AGT団体</fullName>
                </value>
                <value>
                    <fullName>修学旅行</fullName>
                </value>
                <value>
                    <fullName>募集団体</fullName>
                </value>
                <value>
                    <fullName>海外団体</fullName>
                </value>
                <value>
                    <fullName>挙式列席者</fullName>
                </value>
                <value>
                    <fullName>個人</fullName>
                </value>
                <value>
                    <fullName>団体</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SeminarOrderFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>該当予約情報はセミナー予約する場合、該当フラグをチェックする</description>
        <label>セミナー</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceCheckTime__c</fullName>
        <label>サービス_確認日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ServiceCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>サービス_確認済</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceChecker__c</fullName>
        <label>サービス_確認者</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arai</fullName>
                </value>
                <value>
                    <fullName>Kawai</fullName>
                </value>
                <value>
                    <fullName>Souma</fullName>
                </value>
                <value>
                    <fullName>Honma</fullName>
                </value>
                <value>
                    <fullName>Shuden</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SettlementDiv__c</fullName>
        <label>事前決済区分</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SfRegisteredFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>標準Salesforce画面から直接予約データ登録する場合、該当フラグは自動TRUEに設定を行う</description>
        <label>標準画面登録</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShopCodeCal__c</fullName>
        <formula>refTypeOfRooms__r.ShopInfoRef__r.ShopCode__c</formula>
        <label>$店舗コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StampIsShowDiv__c</fullName>
        <description>見積書ハンコ表示：1
見積書ハンコ非表示:0</description>
        <label>見積書ハンコ表示・非表示</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StayNightCal__c</fullName>
        <formula>DATEVALUE(Departure__c) - DATEVALUE(EntryTime__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$泊数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StayPersons__c</fullName>
        <defaultValue>$Setup.CommDefine__c.BookingMansDef__c +  $Setup.CommDefine__c.BookingFemailsDef__c +
$Setup.CommDefine__c.BookingChildrenDef__c</defaultValue>
        <label>予約人数</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StockAdjustTargetFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ロジック判断用、該当フラグを変更すると、該当予約は在庫調整対象外になる</inlineHelpText>
        <label>在庫調整対象外</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Style__c</fullName>
        <label>形式</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>卓盛</fullName>
                </value>
                <value>
                    <fullName>立食</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sum01__c</fullName>
        <formula>IF((SumHiru__c = 1 || ISPICKVAL(ReservedType__c, &quot;婚礼&quot;))&amp;&amp; ISPICKVAL(Rroom__r.UseOfRoom__c, &quot;客室&quot;) ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum01</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum02__c</fullName>
        <description>IF(SumHiru__c = 1 &amp;&amp; ISPICKVAL(Rroom__r.UseOfRoom__c, &quot;客室&quot;) ,1,0)</description>
        <formula>IF(SumYoru__c= 1 &amp;&amp; ISPICKVAL(Rroom__r.UseOfRoom__c, &quot;客室&quot;) ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum02</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum03__c</fullName>
        <description>&amp;&amp; ( NOT(CONTAINS(Name, &quot;クローズ&quot;)) || NOT(CONTAINS(Name, &quot;予約不可&quot;)) )</description>
        <formula>IF(SumOUT__c = 1 &amp;&amp; ISPICKVAL(Rroom__r.UseOfRoom__c, &quot;客室&quot;) ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum03</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SumEnkaiHiru__c</fullName>
        <formula>IF(Hiru__c = 1 , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SumEnkaiHiru</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SumEnkaiYoru__c</fullName>
        <formula>IF(Hiru__c = 0 , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SumEnkaiYoru</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SumHiru__c</fullName>
        <formula>IF (ISPICKVAL(ReservedType__c, &quot;昼 部屋&quot;) &amp;&amp; Hiru__c = 1, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SumHiru</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SumIN__c</fullName>
        <description>&amp;&amp; ( NOT(CONTAINS(Name, &quot;クローズ&quot;)) || NOT(CONTAINS(Name, &quot;予約不可&quot;))</description>
        <formula>if (CONTAINS(Name, &quot;クローズ&quot;) || CONTAINS(Name, &quot;予約不可&quot;), 0, IF((ISPICKVAL( ReservedType__c , &quot;泊 素&quot;) || ISPICKVAL(ReservedType__c, &quot;泊 ２食&quot;) || ISPICKVAL(ReservedType__c, &quot;泊 朝半&quot;) || ISPICKVAL(ReservedType__c, &quot;泊 夕半&quot;)|| ISPICKVAL(ReservedType__c, &quot;婚礼&quot;)||ISPICKVAL(ReservedType__c, &quot;&quot;)) &amp;&amp; (DATEVALUE(EntryTime__c) &lt;&gt;  checkoutdate__c), 1, 0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SumIN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SumOUT__c</fullName>
        <formula>if (CONTAINS(Name, &quot;クローズ&quot;) || CONTAINS(Name, &quot;予約不可&quot;) || CONTAINS(Name, &quot;-1&quot;), 0, IF((ISPICKVAL( ReservedType__c , &quot;泊 素&quot;) || ISPICKVAL(ReservedType__c, &quot;泊 ２食&quot;) || ISPICKVAL(ReservedType__c, &quot;泊 朝半&quot;) || ISPICKVAL(ReservedType__c, &quot;泊 夕半&quot;)|| ISPICKVAL(ReservedType__c, &quot;&quot;)) &amp;&amp; (DATEVALUE(EntryTime__c) &lt;&gt; checkoutdate__c  ), 1, 0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SumOUT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SumSTAY__c</fullName>
        <formula>if (CONTAINS(Name, &quot;クローズ&quot;) || CONTAINS(Name, &quot;予約不可&quot;), 0, IF(DATEVALUE(EntryTime__c) &lt;&gt; DATEVALUE(Departure__c)  &amp;&amp; (CONTAINS(Name, &quot;-&quot;) || CONTAINS(Name, &quot;泊&quot;)) &amp;&amp; NOT(CONTAINS(Name, &quot;-1&quot;)) ,1,0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SumSTAY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SumYoru__c</fullName>
        <formula>IF ( (ISPICKVAL(ReservedType__c, &quot;夕 部屋&quot;) || ISPICKVAL(ReservedType__c, &quot;婚礼&quot;))&amp;&amp; Hiru__c = 0, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SumYoru</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SysIsBulkCheckinFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>該当予約データは一括チェックイン機能で連動チェックインされたがどうか確認用フラグ
業務に使わないください</description>
        <label>一括チェック対象(システム用)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UnitPriceDefKbCal__c</fullName>
        <formula>BLANKVALUE(UnitPriceDefKb__c, &quot;2&quot;  )</formula>
        <label>$会計商品単価定義区分</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitPriceDefKb__c</fullName>
        <defaultValue>TEXT($Setup.CommDefine__c.UnitPriceDefKb__c)</defaultValue>
        <label>会計商品単価定義区分</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VBCheckTime__c</fullName>
        <label>VB_確認日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VBCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VB_確認済</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VBChecker__c</fullName>
        <label>VB_確認者</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>---</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WDrink1__c</fullName>
        <description>ケータリング用（ウェルカムドリンク）</description>
        <label>ウェルカムドリンク</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>有</fullName>
                </value>
                <value>
                    <fullName>無</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WDrink2__c</fullName>
        <description>ケータリング用（ウェルカムドリンク種類）</description>
        <label>ウェルカムドリンク種類</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <formula>IF( 
    ISNULL(EntryTime__c),
    &quot;&quot;,
    CASE( MOD( DATEVALUE(EntryTime__c) - DATE(1900, 1, 7), 7),
	 0, &apos;日&apos;,
	 1, &apos;月&apos;,
	 2, &apos;火&apos;,
	 3, &apos;水&apos;,
	 4, &apos;木&apos;,
	 5, &apos;金&apos;,
	 &apos;土&apos;
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>到着曜日</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>夕 料理10</label>
        <referenceTo>FoodMenu__c</referenceTo>
        <relationshipLabel>ご予約 (夕 料理10)</relationshipLabel>
        <relationshipName>reservRdki</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X1food1__c</fullName>
        <description>ps__lunchX02__r.ps__Currency__c</description>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>未使用</inlineHelpText>
        <label>昼料1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1y1__c</fullName>
        <description>ps__OryourimeiX02__r.ps__Currency__c</description>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>未使用</inlineHelpText>
        <label>夕料1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2__c</fullName>
        <label>室料2</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2food2__c</fullName>
        <description>ps__food1__r.ps__Currency__c</description>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>未使用</inlineHelpText>
        <label>昼料2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2y2__c</fullName>
        <description>ps__yfood1__r.ps__Currency__c</description>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>未使用</inlineHelpText>
        <label>夕料2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3__c</fullName>
        <label>室料3</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3food3__c</fullName>
        <description>ps__food2__r.ps__Currency__c</description>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>未使用</inlineHelpText>
        <label>昼料3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3y3__c</fullName>
        <description>ps__Dinner2__r.ps__Currency__c</description>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>未使用</inlineHelpText>
        <label>夕料3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>checkoutdate__c</fullName>
        <formula>DATEVALUE(Departure__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$出発日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>chu2__c</fullName>
        <label>昼 料理3 数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chu3__c</fullName>
        <label>昼 料理4 数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chuy1__c</fullName>
        <label>夕 料理2 数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chuy__c</fullName>
        <label>夕 料理1 数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>clubflag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>clubflag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>commentran2__c</fullName>
        <label>コメント欄</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>commentran3__c</fullName>
        <inlineHelpText>担当者の判断にて、考慮した方がよいことがら</inlineHelpText>
        <label>コメント欄</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>commentran4__c</fullName>
        <inlineHelpText>担当者の判断にて、考慮した方がよいことがら</inlineHelpText>
        <label>コメント欄</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>メール本文</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>food1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>昼 料理2</label>
        <referenceTo>FoodMenu__c</referenceTo>
        <relationshipLabel>ご予約 (昼 料理2)</relationshipLabel>
        <relationshipName>R00N10000000rKw2EAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>food2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>昼 料理3</label>
        <referenceTo>FoodMenu__c</referenceTo>
        <relationshipLabel>ご予約 (昼 料理3)</relationshipLabel>
        <relationshipName>R00N10000000rKw7EAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>food3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>昼 料理4</label>
        <referenceTo>FoodMenu__c</referenceTo>
        <relationshipLabel>ご予約 (昼 料理4)</relationshipLabel>
        <relationshipName>R00N10000000rKwCEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kakunin__c</fullName>
        <description>ケータリング支払い関係項目</description>
        <label>確認書</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>有</fullName>
                </value>
                <value>
                    <fullName>無</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kessan__c</fullName>
        <description>ケータリング支払い関係項目</description>
        <label>決算書</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>未</fullName>
                </value>
                <value>
                    <fullName>済</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lunchX02__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>11:30〜14:00(ラストオーダー)</description>
        <label>昼 料理1</label>
        <referenceTo>FoodMenu__c</referenceTo>
        <relationshipLabel>ご予約 (昼 料理1)</relationshipLabel>
        <relationshipName>R00N10000000rGrAEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>microbusflag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>microbusflag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>numsofdinner2__c</fullName>
        <label>夕 料理3 数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>numsofdinner3__c</fullName>
        <label>夕 料理4 数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>numsofdinner4__c</fullName>
        <label>夕 料理5 数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>refAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>請求先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ご予約</relationshipLabel>
        <relationshipName>Booking6BKP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>refTypeOfRooms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>部屋タイプ</label>
        <referenceTo>TypeOfRooms__c</referenceTo>
        <relationshipLabel>ご予約</relationshipLabel>
        <relationshipName>typeOfRooms</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>